@@ -1,3 +1,4 @@
+2/1/12 change request: use a minimum view height for a solution with non-zero volume, so that it's visible to the user and detectable by the concentration probe
 2/1/12 check in a snapshot of design doc
 # 0.00.17 (60823) Jan 31, 2012
 1/31/12 dev version after code review changes
